--- a/website/ClientApp/src/components/Speciality/SpecialityPage/SpecialityPage.css
+++ b/website/ClientApp/src/components/Speciality/SpecialityPage/SpecialityPage.css
@@ -4,6 +4,7 @@
     
     display: flex;
     flex-direction: column;
+    margin: 20px;
 }
 
  .speciality  .title{
@@ -14,6 +15,8 @@
     font-weight: 800;
 }
 
+
+
 .speciality .container_all .about_opp{
     width: 100%;
     height: 250px;
@@ -23,19 +26,28 @@
     font-size:35px ;
     font-weight: 600;
 }
+
+.speciality .name_speciality a:hover{
+    text-decoration: none;
+    color:red;
+    transition: 0.5s;
+}
+
 .speciality .opp_speciality{
     font-size:30px ;
 }
 .about_opp{
     border-radius: 15px;
     padding: 30px;
-    margin-top: 40px;
-    background: rgb(227, 255, 199);
+    
+    background: #6BEBE4;
+    margin: 40px 0;
 }
 .about_opp ul{
     display: flex;
     flex-direction: column;
 }
 .about_opp ul li{
+    list-style: inside;
     margin-top: 10px;
 }
