--- a/website/ClientApp/src/components/Shared/Footer.css
+++ b/website/ClientApp/src/components/Shared/Footer.css
@@ -220,6 +220,13 @@ height: 100%;
   cursor: pointer;
   opacity:1;
 }
+.about_us ul{
+  display: flex;
+  flex-direction: column;
+}
+.about_us ul li{
+  padding-left: 10px;
+}
 /*
 @media(max-width :2561px){
   
