--- a/website/ClientApp/src/components/MainPage/components/WarningMain.css
+++ b/website/ClientApp/src/components/MainPage/components/WarningMain.css
@@ -26,6 +26,10 @@
     flex-direction:column ;
     
 }
+.text_warning h3 a:hover{
+    text-decoration: none;
+    transition: 0.4s;
+}
 .text_warning h3{
     padding: 20px;
     font-weight: 800;
