pagination gip gip ura

--- a/website/ClientApp/src/components/MainPage/components/Main_news.css
+++ b/website/ClientApp/src/components/MainPage/components/Main_news.css
@@ -15,10 +15,10 @@
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: auto;
+    grid-auto-rows: auto !important;
 }
 .info_news{
-    
+    height: 100%;
     display: flex;
     flex-direction: column;  
 }
@@ -28,7 +28,7 @@
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
-    height: fit-content;
+    height: 100%;
     align-items: center;
    
 }
