--- a/website/ClientApp/src/components/GaleryPage/Galery.css
+++ b/website/ClientApp/src/components/GaleryPage/Galery.css
@@ -10,5 +10,37 @@
     color: rgb(255, 0, 0);
 }
 .carusel{
+    display: flex;
+    height: fit-content;
     width: 100%;
+}
+
+.carousel{
+    display: flex;
+    height: 80vh;
+    width: 100%;
+    margin:40px 0;
+}
+
+
+@media(max-width:1025px){
+    .carousel{
+        height: 500px;
+    }
+
+    .carousel ul{
+ display: flex !important;
+    }
+}
+
+@media(max-width:769px){
+    
+    .carousel{
+        height: 400px !important;
+    }
+    .carousel ul{
+        display: flex !important;
+        flex-direction: none;
+    }
+    
 }
