--- a/website/ClientApp/src/components/HistoryPage/HistoryPage.css
+++ b/website/ClientApp/src/components/HistoryPage/HistoryPage.css
@@ -126,6 +126,12 @@
         padding: 20px 10px 20px 10px;
         border-radius: 10px;
     }
+    .pidgotovka h2{
+        font-size: 21px;
+    }
+    .pidgotovka ul{
+        font-size: 17px;  
+    }
 }
 
 @media (max-width:769px) {
@@ -160,6 +166,13 @@
         font-size: 13px;
         padding: 20px 10px 20px 10px;
         border-radius: 10px;
+    }
+
+    .pidgotovka h2{
+        font-size: 16px;
+    }
+    .pidgotovka ul{
+        font-size: 13px;  
     }
 }
 
@@ -206,6 +219,13 @@
         padding: 10px;
         border-radius: 10px;
     }
+
+    .pidgotovka h2{
+        font-size: 14px;
+    }
+    .pidgotovka ul{
+        font-size: 12px;  
+    }
 }
 
 @media (max-width:376px) {
@@ -250,5 +270,11 @@
         font-size: 12px;
         padding: 10px;
         border-radius: 10px;
+    }
+    .pidgotovka h2{
+        font-size: 14pxpx;
+    }
+    .pidgotovka ul{
+        font-size: 12px;  
     }
 }
