--- a/website/ClientApp/src/components/NewsPage/NewsPage.css
+++ b/website/ClientApp/src/components/NewsPage/NewsPage.css
@@ -5,8 +5,10 @@
     background-color: rgb(189, 203, 219);
     height: fit-content;
     font-size: 18px;
-     margin: 30px 0;
+     margin: 20px 0;
     border-radius: 10px;
+
+    margin-bottom:40px
 }
 .news_header{
     align-items: center;
@@ -14,7 +16,7 @@
     justify-content: center;
     font-size: 50px;
     font-weight: 700;
-    margin: 20px;
+    margin-top:30px ;
     
 }
 .news_block .news_title{
@@ -61,28 +63,12 @@ display: flex;
 flex-direction: column;
 }
 
-.pagination{
-    display: flex;
-  margin: 10px auto;
-  
+.slick-dots{
+    bottom: 10px ;
 }
 
-.pagination_button{
-      font-weight: 700;
-        width:42px;
-        background:rgb(161, 224, 253) ;
-        height: 42px;
-        border-radius: 50%;
-        font-size: 24px;
-        color:rgb(21, 55, 78);
-        margin: 0  5px;
-
-}
-
-.pagination_button:hover{
-    
-    border: 5px solid rgb(165, 202, 226);
-    
+.MuiPagination-root{
+    margin:15px auto !important; 
 }
 
 @media(max-width:1025px){
@@ -92,7 +78,7 @@ flex-direction: column;
         margin: 20px 0;
         font-size: 17px;
         
-        
+        margin-bottom: 30px;
     }
     .news_info{
         display: flex;
@@ -130,20 +116,7 @@ flex-direction: column;
     } 
     
     
-    .pagination{
-       
-      margin: 10px auto;
-      
-    }
     
-    .pagination_button{
-          
-            width:37px;          
-            height: 37px;
-            font-size: 22px;
-          
-    
-    }
 }
 
 
@@ -154,7 +127,7 @@ flex-direction: column;
         margin: 15px 0;
         font-size: 14px;
         
-        
+        margin-bottom: 30px;
     }
     .news_info{
         display: flex;
@@ -172,7 +145,10 @@ flex-direction: column;
         font-size: 22px;
         
     }
-    
+    .container_all .news_block ul{
+        display: flex !important;
+        flex-direction: none !important;
+    }
     .news_block .news_info h2{
         font-size: 20px;
     }
@@ -192,20 +168,7 @@ flex-direction: column;
     } 
     
     
-    .pagination{
-       
-      margin: 10px auto;
-      
-    }
-    
-    .pagination_button{
-          
-            width:37px;          
-            height: 37px;
-            font-size: 22px;
-          
-    
-    }
+   
 }
 
 
@@ -215,7 +178,7 @@ flex-direction: column;
         
         margin: 15px 0;
         font-size: 12px;
-        
+        margin-bottom: 40px;
         
     }
     .news_info{
@@ -254,19 +217,9 @@ flex-direction: column;
     } 
     
     
-    .pagination{
-       
-      margin: 10px auto;
-      
-    }
-    
-    .pagination_button{
-          
-            width:30px;          
-            height: 30px;
-            font-size: 16px;
-          
-    
+    .container_all .news_block ul{
+        display: flex !important;
+        flex-direction: none !important;
     }
 }
 
@@ -278,7 +231,7 @@ flex-direction: column;
         margin: 15px 0;
         font-size: 12px;
         
-        
+        margin-bottom: 40px;
     }
     .news_info{
         display: flex;
@@ -331,6 +284,153 @@ flex-direction: column;
     
     }
 }
+
+/*
+import React, { useEffect, useState } from 'react';
+import { Link } from 'react-router-dom';
+
+import axios from 'axios'
+import '../NewsPage/NewsPage.css'
+function NewsPage() {
+  
+  const [news, setNews] = useState([]);
+  
+  const [page, setPage] = useState(1);
+  const [totalPages, setTotalPages] = useState(0);
+  const [loading, setLoading] = useState(false);
+  const [currentPage, setCurrentPage] = useState(1);
+  const [postsPerPage] = useState(3);
+  const indexOfLastPost = currentPage * postsPerPage;
+  const indexOfFirstPost = indexOfLastPost - postsPerPage;
+  const currentPosts = news.slice(indexOfFirstPost, indexOfLastPost);
+
+
+  useEffect(() => {
+    axios.get("https://bsite.net/IvanovIvan/news").then((res)=>{
+      setLoading(true);
+      setLoading(false);
+      setNews(res.data);
+      setTotalPages(Math.ceil(res.data.length / postsPerPage));
+    })
+  }, []);
+
+  const handleClick = num => {
+    setPage(num);
+  }
+  // Change page
+  const paginate = pageNumber => setCurrentPage(pageNumber);
+
+
+  const News = ({ news, page }) => {
+    const startIndex = ( page - 1 ) * postsPerPage;
+    const selectedUsers = news?.slice(startIndex, startIndex + postsPerPage);
+    return  (
+      <div>   
+            <div className="news_header">
+                Новини
+            </div>
+          
+            {selectedUsers?.map((n,index)=>(
+              currentPage == 1 ? ( index < 3 * currentPage && 
+            (<div className="news_block">
+              <div className="news_title">
+                { n.title}
+              </div>
+              <div className="news_info">
+             <img src={`data:image/gif;base64,${n.image}`}/>
+               <div className="text_and_link">
+                 <h2>{n.short_text}</h2>
+                <div className="link_news">
+                 <Link key = {n.id} to ={`/news/${n.id}`}>Детальніше</Link>
+                  </div>
+                </div>
+             </div>
+             
+             <p>{n.date.substr(0,10)}</p>
+             </div> ) ):(
+               index >= 3 * (currentPage - 1) && index < 3 *currentPage && (
+                <div className="news_block">
+                <div className="news_title">
+                  { n.title}
+                </div>
+                <div className="news_info">
+               <img src={`data:image/gif;base64,${n.image}`}/>
+                 <div className="text_and_link">
+                   <h2>{n.short_text}</h2>
+                  <div className="link_news">
+                   <Link key = {n.id} to ={`/news/${n.id}`}>Детальніше</Link>
+                    </div>
+                  </div>
+               </div>
+               
+               <p>{n.date.substr(0,10)}</p>
+               </div>
+               )
+             )
+           
+           ))}
+           </div> 
+     
+    )
+  }
+
+
+
+
+  const Pagination = ({ postsPerPage, totalPosts, paginate }) => {
+    const pageNumbers = [];
+  
+    for (let i = 1; i <= Math.ceil(totalPosts / postsPerPage); i++) {
+      pageNumbers.push(i);
+    }
+  
+    return (
+      <nav>
+        <ul className='pagination'>
+          {pageNumbers.map(number => (
+            <li key={number} className='page-item'>
+              <a onClick={() => paginate(number)}  className='page-link'>
+                {number}
+              </a>
+            </li>
+          ))}
+        </ul>
+      </nav>
+    );
+  };
+    //
+       
+       
+  return (
+    <div className="newspage">
+      <div className="container_all">
+
+        
+                {loading ? <p>Loading...</p> : <>
+                  <News news={news} page={page} />
+                  <div className = "pagination">
+                  <Pagination totalPages={totalPages} handleClick={handleClick} 
+
+            
+
+                  postsPerPage={postsPerPage}
+                  totalPosts={news.length}
+                  paginate={paginate}
+
+                  />
+                  </div>
+                </> }
+            
+          </div>
+      </div>
+        
+           
+  );
+}
+
+
+export default NewsPage;
+*/
 
 
 
