--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -2,9 +2,9 @@
 
 .page img{
 
-    width: 100%;
+    width: 80%;
     object-fit: contain;
-    margin: 0 auto ;
+    margin: 25px auto !important;
 }
 .page{
     width: 100%;
@@ -48,9 +48,7 @@
     background-color:none;
     
 }
-.title_page h1{
-    
-}
+
 .other_block_info{
     margin-left: 10px;
     display: flex;
@@ -84,60 +82,79 @@
     display: flex;
     
 }
+@media (max-width:2561px){
+    
 
+   .page{
+       font-size: 25px;
+   }
+
+   .page h1{
+    font-size: 40px;
+  }
+}
+
+@media (max-width:1441px){
+   
+
+   .page{
+       font-size: 20px;
+   }
+   .page h1{
+    font-size: 40px;
+  }
+}
 
 @media (max-width:1025px){
-    .title_page h1{
-      font-size: 32px;
+    
+
+    .page{
+        font-size: 18px;
     }
 
-    .other_block_info ul li{
-        list-style: number;
-        font-size: 20px;
-        margin: 10px;
-    }
+    .page h1{
+        font-size: 30px;
+      }
 }
 
 @media (max-width:769px){
-    .title_page h1{
-      font-size: 27px;
-    }
+    
     .page img{
 
         width: 100%;
         object-fit: contain;
         margin: 0 auto;
     }
-    .other_block_info ul li{
-        list-style: number;
-        font-size: 17px;
-        margin: 10px;
+    .page{
+        font-size: 16px;
     }
+
+    .page h1{
+        font-size: 25px;
+      }
 }
 
 @media (max-width:426px){
-    .title_page h1{
-      font-size: 23px;
-    }
+    
     .page .container_all{
         width: 85% !important;
         margin: 0 auto;
     }
-    .other_block_info ul li{
-        list-style: number;
-        font-size: 14px;
-        margin: 10px;
+    .page{
+        font-size: 13px;
     }
+    .page h1{
+        font-size: 23px;
+      }
 }
 
 @media (max-width:376px){
-    .title_page h1{
-      font-size: 20px;
-    }
+    
 
-    .other_block_info ul li{
-        list-style: number;
-        font-size: 13px;
-        margin: 10px;
+    .page{
+        font-size: 12px;
     }
+    .page h1{
+        font-size: 20px;
+      }
 }
