--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -1,9 +1,11 @@
 
 
 .page img{
-
+   display: flex;
     width: 80%;
     object-fit: contain;
+     align-items: center;
+     justify-content: center;
     margin: 25px auto !important;
 }
 .page{
