--- a/website/ClientApp/src/components/AdminPage/components/News.css
+++ b/website/ClientApp/src/components/AdminPage/components/News.css
@@ -1,11 +1,17 @@
 
 .add_news{
-    height: fit-content;
+    
+    width: fit-content;
+    height: fit-content !important;
     background: radial-gradient(circle, rgba(222,98,98,1) 0%, rgba(255,184,140,1) 100%);
     padding: 10px 10px 10px 10px ;
     border-radius: 10px;
-    margin: 30px 0 30px 0;
+    margin: 150px auto;
     display: grid;
+}
+.news_admin .container_all{
+    display: grid;
+    place-items: center;
 }
 .add_news h1{
     font-size: 40px;
@@ -121,8 +127,8 @@
     font-weight: 500;
 }
 
-.container_for_krasota #cancel-btn{
-    position: absolute;
+.add_news  #cancel-btn{
+   
     right: 15px;
     top:15px;
     cursor: pointer;
@@ -130,7 +136,7 @@
     font-size: 20px;
 }
 
-.container_for_krasota #cancel-btn:hover{
+.add_news  #cancel-btn:hover{
     cursor: pointer;
 }
 
@@ -145,10 +151,10 @@
     background: linear-gradient(135deg,#3a8ffe 0%, #9658fe 100%);
 }
 
-.all_for_file #custom-btn{
+.add_news #custom-btn{
     margin-top: -20px;
     width: 100%;
-    height: 50px;
+    height: 30px;
     display: block;
     border-radius: 25px;
     background: linear-gradient(135deg,#3a8ffe 0%, #9658fe 100%);
@@ -235,4 +241,12 @@
 .button_done{
     display: flex;
     justify-content: center;
+}
+.info{
+    width: fit-content;
+    height: fit-content !important;
+}
+.info .text{
+    width: fit-content !important ;
+     height: fit-content !important;
 }
