--- a/website/ClientApp/src/components/AdminPage/components/Uvaha.css
+++ b/website/ClientApp/src/components/AdminPage/components/Uvaha.css
@@ -2,8 +2,11 @@
    height: fit-content;
    display: flex;
    flex-direction: column;
-   background-color: rgb(122, 175, 245); 
+   background-color: rgb(182, 209, 243); 
    border-radius: 10px;
+   width: 800px;
+   padding: 20px;
+   margin: 20px auto;
 }
 .one_uvaha button{
     margin: 0 auto;
@@ -15,4 +18,7 @@
     flex-direction: column;
     margin: 20px auto;
     width: 500px;
+}
+.add_warning form{
+    
 }
