--- a/website/ClientApp/src/components/AdminPage/components/News.css
+++ b/website/ClientApp/src/components/AdminPage/components/News.css
@@ -6,7 +6,7 @@
     background: radial-gradient(circle, rgba(222,98,98,1) 0%, rgba(255,184,140,1) 100%);
     padding: 10px 10px 10px 10px ;
     border-radius: 10px;
-    margin: 150px auto;
+    margin: 20px auto;
     display: grid;
 }
 .news_admin .container_all{
@@ -249,4 +249,9 @@
 .info .text{
     width: fit-content !important ;
      height: fit-content !important;
+}
+
+.news_add_block{
+display: grid;
+place-items: center;
 }
