--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -319,7 +319,6 @@
    flex-direction: column;
    margin: 20px;
    place-items: center;
-   
    background-color: rgb(212, 212, 212);
 
 }
@@ -415,9 +414,11 @@
     justify-content: center;
     text-align: center;
     background-color: rgb(46, 170, 170);
-    width: 500px;
-    margin: 20px;
+    width: 800px;
+    border-radius: 10px;
+    margin: 20px auto;
     align-items: center;
+    padding: 10px;
 }
 
 .admin_employers .one_admin_emp button{
@@ -432,7 +433,7 @@
     flex-direction: column;
     justify-content: center;
     margin: 20px auto;
-    width: 500px;
+    width: 600px;
 }
 .forma_add_emp form input {
     border: 1px solid black;
@@ -450,6 +451,28 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
+}
+.qwert{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.qwert input{
+    width: 40px;
+    background-color: rgb(167, 167, 167);
+    border-radius:5px ;
+}
+.qwert button{
+    width:100px;
+    font-size: 14px;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 0;
+}
+.qwert input ::placeholder{
+    color:gray;
 }
 
 
