--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -94,7 +94,7 @@
 
 .sub_menu{
     height: 80%;
-    width: 50%;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -128,7 +128,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 50%;
+    height: 100%;
+    overflow:scroll;
+    border: 1px solid black;
+    border-left:none;
+    border-right: none;
+    
+    width: fit-content;
 }
 .buttons{
     display: flex;
