--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -11,6 +11,15 @@
 .page{
     width: 100%;
 }
+.page ul{
+    display: flex;
+    flex-direction: column;
+
+}
+.page ol{
+    display: flex;
+    flex-direction: column;
+}
 
 .title_page{
     display: flex;
