--- a/website/ClientApp/src/components/EntrantPage/EntrantPage.css
+++ b/website/ClientApp/src/components/EntrantPage/EntrantPage.css
@@ -122,167 +122,524 @@
     font-size: 20px;
     list-style: circle;
 }
+@media (max-width:1600px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 450px;
+        height: 650px;
+    }
+    
+}
 
-
-@media (max-width:1025px){
+@media (max-width:1441px){
     
     
     .entrant_title{
-        
-        margin: 10px;
+        display: flex;
+        justify-content: center;
+        margin: 20px;
     }
     .entrant_title h1{
         font-size: 40px;
-        color:red;
+        
     
     }
     .entrant_info{
         margin: 0 auto;
     }
     
-    .entrant_image{
+    .entrant .entrant_image{
+        padding: 0;
      width: 90%;
      
      object-fit: contain;
      margin: 20px auto;
      display: block;
+     border-bottom:2px solid #424245;
     }
     
-  
+    .entrant_text_info{
+        display: flex;
+        flex-direction: column;
+    }
     .entrant_text_info ul {
         display: flex;
         flex-direction: column;
-        margin: 15px;
+        margin: 20px;
+    }
+    .entrant_page_text{
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0 ;
     }
     
-    .entrant_text_info ul h1{
-        text-shadow: 3px 3px 0px rgba(136, 178, 218, 0.835);
-        font-size: 38px ;
+    .entrant_page_text h1{
+        text-align: center;
+        text-shadow: 3px 3px 0px rgba(72, 189, 183, 0.835);
+        font-size: 45px ;
     }
+    .entrant_page_text .picture{
+        display: flex;
+        justify-content: space-between;
+    }
+    .entrant_page_text .picture img{
+        margin: 20px 0 ;
+        width: 500px;
+        height: 700px;
+    }
+    
+   
     .entrant_text_info ul li{
         list-style: circle;
         font-size: 18px;
         font-style: italic;
-        margin-left: 40px;
+        margin-left: 35px;
     }
+    
+    .rules{
+        display: flex;
+        justify-content: center;
+    }
+    .rules a{
+        font-size: 24px;
+        
+    }
+    
+    .vuprobuvannya{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .vuprobuvannya h2{
+        margin: 20px;
+    }
+    .konkurs_link{
+        align-items: center;  
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .konkurs_link img{
+        height: 120px;
+        object-fit: contain; 
+        opacity:0.6;
+    }
+    .konkurs_link img:hover{
+        opacity:1;
+    }
+    .entrant h3{
+        text-align: center;
+        margin: 40px 0;
+    
+    }
+    
+    .konkurs_link .ulli ul{
+        display: flex;
+        flex-direction: column;
+        font-size: 30px;
+        
+    }
+    .konkurs_link .ulli ul p{
+        
+        font-size: 30px;
+        text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+    }
+    
+    .konkurs_link .ulli ul li{
+        opacity:1;
+        font-size: 20px;
+        list-style: circle;
+    }   
+    
+    
+}
+@media (max-width:1310px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 400px;
+        height: 600px;
+    }
+    
+}
+
+@media (max-width:1100px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 370px;
+        height: 550px;
+    }
+    
+}
+@media (max-width:1025px){
+    
+    
+    .entrant_title{
+        display: flex;
+        justify-content: center;
+        margin: 15px;
+    }
+    .entrant_title h1{
+        font-size: 35px;
+        
+    
+    }
+    .entrant_info{
+        margin: 0 auto;
+    }
+    
+    
+    
+    .entrant_text_info{
+        display: flex;
+        flex-direction: column;
+    }
+    .entrant_text_info ul {
+        display: flex;
+        flex-direction: column;
+        margin: 20px;
+    }
+    .entrant_page_text{
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0 ;
+    }
+    
+    .entrant_page_text h1{
+        text-align: center;
+        text-shadow: 3px 3px 0px rgba(72, 189, 183, 0.835);
+        font-size: 40px ;
+    }
+   
+    .entrant_page_text .picture img{
+        margin: 20px 0 ;
+        width: 350px;
+        height: 550px;
+    }
+    
+   
+    .entrant_text_info ul li{
+        list-style: circle;
+        font-size: 17px;
+        font-style: italic;
+        margin-left: 35px;
+    }
+    
+    .rules{
+        display: flex;
+        justify-content: center;
+    }
+    .rules a{
+        font-size: 22px;
+        
+    }
+    
+    .vuprobuvannya{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .vuprobuvannya h2{
+        margin: 20px;
+    }
+    .konkurs_link{
+        align-items: center;  
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .konkurs_link img:hover{
+        opacity:1;
+    }
+    .entrant h3{
+        text-align: center;
+        margin: 40px 0;
+       font-size: 35px;
+    }
+    
+    
+    .konkurs_link .ulli ul{
+        display: flex;
+        flex-direction: column;
+        font-size: 30px;
+        
+    }
+    .konkurs_link .ulli ul p{
+        
+        font-size: 30px;
+        text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+    }
+    
+    .konkurs_link .ulli ul li{
+        opacity:1;
+        font-size: 20px;
+        list-style: circle;
+    }   
     .konkurs_link img{
         height: 100px;
         object-fit: contain;
     }
 }
-
+@media (max-width:1100px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 280px;
+        height: 500px;
+    }
+    
+}
 @media (max-width:769px){
     
     
     .entrant_title{
-        
-        margin: 10px;
+        display: flex;
+        justify-content: center;
+        margin: 15px;
     }
     .entrant_title h1{
         font-size: 30px;
-        color:red;
+        
     
     }
     .entrant_info{
         margin: 0 auto;
     }
     
-    .entrant_image{
-     width: 90%;
     
-     object-fit: contain;
-     margin: 20px auto;
-     display: block;
+    
+    .entrant_text_info{
+        display: flex;
+        flex-direction: column;
     }
-    
-  
     .entrant_text_info ul {
         display: flex;
         flex-direction: column;
-        margin: 15px;
+        margin: 20px;
+    }
+    .entrant_page_text{
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0 ;
     }
     
-    .entrant_text_info ul h1{
-        text-shadow: 3px 3px 0px rgba(136, 178, 218, 0.835);
-        font-size: 28px ;
+    .entrant_page_text h1{
+        text-align: center;
+        text-shadow: 3px 3px 0px rgba(72, 189, 183, 0.835);
+        font-size: 35px ;
     }
+   
+    .entrant_page_text .picture img{
+        margin: 20px 0 ;
+        width: 240px;
+        height: 430px;
+    }
+    .konkurs_link{
+        align-items: center;  
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+   
     .entrant_text_info ul li{
-        text-align: left !important;
         list-style: circle;
-        font-size: 15px;
+        font-size: 17px;
         font-style: italic;
-        margin-left: 25px;
+        margin-left: 35px;
     }
-    .entrant .entrant_image{
-        padding: 0;
-     width: 90%;
-     
-     object-fit: contain;
-     margin: 20px;
-     display: block;
-     border-bottom:2px solid #424245;
+    
+    .rules{
+        display: flex;
+        justify-content: center;
     }
-
+    .rules a{
+        font-size: 20px;
+        
+    }
+    
+    .vuprobuvannya{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .vuprobuvannya h2{
+        margin: 12px;
+    }
+    
+    .konkurs_link img:hover{
+        opacity:1;
+    }
+    .entrant h3{
+        text-align: center;
+        margin: 40px 0;
+        font-size: 30px;
+    }
+    .konkurs_link .ulli{
+        margin:15px auto;
+    }
+    .konkurs_link .ulli ul{
+        display: flex;
+        flex-direction: column;
+        font-size: 26px;
+        
+    }
+    .konkurs_link .ulli ul p{
+        
+        font-size: 25px;
+        text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+    }
+    
+    .konkurs_link .ulli ul li{
+        opacity:1;
+        font-size: 20px;
+        list-style: circle;
+    }   
     .konkurs_link img{
-        height: 80px;
+        height: 100px;
         object-fit: contain;
     }
 }
+@media (max-width:675px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 220px;
+        height: 380px;
+    }
+    
+}
 
+@media (max-width:615px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 200px;
+        height: 350px;
+    }
+    
+}
+
+@media (max-width:615px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 160px;
+        height: 210px;
+    }
+    
+}
 @media (max-width:426px){
     
     
-    .entrant_title{
-        
-        margin: 10px;
-    }
+   
     .entrant_title h1{
-        font-size: 25px;
-    
+        font-size: 23px;
+    }
+    .entrant_info{
+        margin: 0 auto;
     }
     
     
-    .entrant_image{
-     width: 90%;
     
-     object-fit: contain;
-     margin: 10px auto;
-     display: block;
-    }
-    
-    .konkurs_link{
-        height: 70px;
-       
-        display: grid;
-        place-items: center;
+    .entrant_text_info{
+        display: flex;
+        flex-direction: column;
     }
     .entrant_text_info ul {
         display: flex;
         flex-direction: column;
         margin: 15px;
     }
+    .entrant_page_text{
+        display: flex;
+        flex-direction: column;
+        margin: 15px 0 ;
+    }
     
-    .entrant_text_info ul h1{
-        text-shadow: 3px 3px 0px rgba(136, 178, 218, 0.835);
-        font-size: 21px ;
+    .entrant_page_text h1{
+        text-align: center;
+        text-shadow: 3px 3px 0px rgba(72, 189, 183, 0.835);
+        font-size: 22px ;
     }
+   
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 130px;
+        height: 260px;
+    }
+    
+   
     .entrant_text_info ul li{
-        text-align: left !important;
         list-style: circle;
-        font-size: 13px;
+        font-size: 14px;
         font-style: italic;
-        margin-left: 10px;
+        margin-left: 35px;
     }
-    .entrant .entrant_image{
-        padding: 0;
-     width: 90%;
-     
-     object-fit: contain;
-     margin: 20px;
-     display: block;
-     border-bottom:1px solid #424245;
+    
+    .rules{
+        display: flex;
+        justify-content: center;
     }
-
+    .rules a{
+        font-size: 16px;
+        
+    }
+    
+    .vuprobuvannya{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .vuprobuvannya h2{
+        margin: 12px;
+    }
+    
+    .konkurs_link img:hover{
+        opacity:1;
+    }
+    .entrant h3{
+        text-align: center;
+        margin: 40px 0;
+        font-size: 18px;
+    }
+    
+    .konkurs_link .ulli ul{
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        
+    }
+    .konkurs_link .ulli ul p{
+        
+        font-size: 17px;
+        text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+    }
+    
+    .konkurs_link .ulli ul li{
+        opacity:1;
+        font-size: 13px;
+        list-style: circle;
+        padding: 3px 5px;
+    }   
+    
     .konkurs_link img{
         height: 70px;
         object-fit: contain;
@@ -311,7 +668,11 @@
      display: block;
     }
     
-  
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 130px;
+        height: 240px;
+    }
     .entrant_text_info ul {
         display: flex;
         flex-direction: column;
@@ -333,4 +694,16 @@
         height: 65px;
         object-fit: contain;
     }
+}
+
+@media (max-width:321px){
+    
+    
+    
+    .entrant_page_text .picture img{
+        margin: 15px 0 ;
+        width: 100px;
+        height: 220px;
+    }
+    
 }
