--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -94,9 +94,7 @@
     
 }
 @media (max-width:2561px){
-    
-
-   .page ,.page ul,ol{
+   .page , .page ul,ol{
        font-size: 25px !important;
    }
 
@@ -104,8 +102,17 @@
     font-size: 25px !important;
 }
   
-   .page h1,h4,h3,h2,h5,h6{
+   .page h1{
     font-size: 40px;
+  }
+  .page h2{
+      font-size: 30px;
+  }
+  .page h3{
+      font-size: 20px;
+  }
+  .page h4{
+      font-size: 25px;
   }
 }
 
@@ -124,23 +131,26 @@
 }
 
 @media (max-width:1025px){
-    
-
     .page  {
         font-size: 18px !important;
     }
     .page ul li ,ol li{
         font-size: 18px !important;
     }
-    .page h1,h4,h3,h2,h5,h6{
+    .page h1{
         font-size: 30px;
-      }
+    }
+    .page h2{
+        font-size: 25px;
+    }
+    .page h3,h4{
+        font-size: 18px
+    }
 }
 
 @media (max-width:769px){
     
     .page img{
-
         width: 100%;
         object-fit: contain;
         margin: 0 auto;
@@ -151,9 +161,16 @@
     .page .container_all  ul li ,ol li{
         font-size: 16px !important;
     }
-    .page h1,h4,h3,h2,h5,h6{
-        font-size: 25px;
+    .page h1{
+        font-size: 20px ;
       }
+    .page h2,h3,h4{
+        font-size: 16px;
+    }
+    .page ul h1{
+        font-size: 16px;
+    }
+   
 }
 
 @media (max-width:426px){
