--- a/website/ClientApp/src/components/Shared/Page.css
+++ b/website/ClientApp/src/components/Shared/Page.css
@@ -100,13 +100,22 @@
        font-size: 25px !important;
    }
 
-   .page ul li ,ol li{
+   .page ul,ol {
     font-size: 25px !important;
 }
   
-   .page h1,h4,h3,h2,h5,h6{
+   .page h1{
     font-size: 40px;
   }
+
+  .page h2{
+    font-size: 35px;
+  }
+  .page h3,h4,h5,h6{
+    font-size: 25px;
+  }
+
+  
 }
 
 @media (max-width:1441px){
@@ -115,12 +124,20 @@
    .page {
        font-size: 20px  !important;
    }
-   .page ul li ,ol li{
+   .page ul ,ol {
     font-size: 20px !important;
 }
-   .page h1,h4,h3,h2,h5,h6{
-    font-size: 40px;
+   .page h1{
+    font-size: 35px;
   }
+
+  .page h2{
+    font-size: 30px;
+  }
+  .page h3,h4,h5,h6{
+    font-size: 20px;
+  }
+
 }
 
 @media (max-width:1025px){
@@ -129,11 +146,18 @@
     .page  {
         font-size: 18px !important;
     }
-    .page ul li ,ol li{
+    .page ul  ,ol {
         font-size: 18px !important;
     }
-    .page h1,h4,h3,h2,h5,h6{
+    .page h1{
         font-size: 30px;
+      }
+
+      .page h2{
+        font-size: 25px;
+      }
+      .page h3,h4,h5,h6{
+        font-size: 18px;
       }
 }
 
@@ -148,12 +172,21 @@
     .page  {
         font-size: 16px !important;
     }
-    .page .container_all  ul li ,ol li{
+    .page .container_all  ul ,ol {
         font-size: 16px !important;
     }
-    .page h1,h4,h3,h2,h5,h6{
+    .page h1{
         font-size: 25px;
       }
+
+      .page h2{
+        font-size: 22px;
+      }
+      .page h3,h4,h5,h6{
+        font-size: 16px;
+      }
+
+
 }
 
 @media (max-width:426px){
@@ -166,25 +199,39 @@
         font-size: 13px !important;
     }
 
-    .page ul li ,ol li{
+    .page ul  ,ol {
         font-size: 13px !important;
     }
     
-    .page h1,h4,h3,h2,h5,h6{
-        font-size: 23px;
+    .page h1{
+        font-size: 20px;
+      }
+
+      .page h2{
+        font-size: 17px;
+      }
+      .page h3,h4,h5,h6{
+        font-size: 13px;
       }
 }
 
 @media (max-width:376px){
     
 
-    .page {
+    .page .page ul,ol{
         font-size: 12px !important;
     }
-    .page ul li ,ol li{
+    .page ul  ,ol {
         font-size: 12px !important;
     }
-    .page h1,h4,h3,h2,h5,h6{
+    .page h1{
         font-size: 20px;
+      }
+
+      .page h2{
+        font-size: 17px;
+      }
+      .page h3,h4,h5,h6{
+        font-size: 12px;
       }
 }
