--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -151,6 +151,7 @@
     font-size: 20px;
     padding: 0;
     margin:0;
+    height: 100% !important;
     text-align: center;
     font-weight: 600;
     align-items: center;
