--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -301,6 +301,7 @@
 
 .special_editor_buttons{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
@@ -308,6 +309,8 @@
 .special_editor_buttons button{  
     margin-right: 10px;
     border-radius: 5px;
+    margin-top: 10px;
+
 }
 .title_galery{
     display: flex;
