--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -1,85 +1,96 @@
-.mainInfo{
-    width: 100%;
-    height: 220px;
-    display: grid;
-    place-items: center;
-    
-}
-.line_header{
-    border:none;
-    background-color: darkblue;
-    border-radius: 5px;
-    height: 6px;
-    width: 100%;
-    margin: 0;
-}
-.About_us{
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    display: grid;
-    place-items: center;
-}
-.text{
-    height: 200px;
-}
-.text img{
-    width: 100%;
-   height: 100%;
-}
-.container_all{
-    margin:0 auto;
-    height: 100%;
-    width: 75%;
-}
-
-.container_all nav{
-    display: flex;
-   height: 100%;
-    align-items: center;
-    margin:0 auto;
-}
-.container_all  ul{
-    margin: 0;
-    display: flex;
+.mainInfo {
+	width: 100%;
+	height: 220px;
+	display: grid;
+	place-items: center;
 
 }
 
-.menu_header{
-    height: 50px;
-    background-color: #396FC5;
+.line_header {
+	border: none;
+	background-color: darkblue;
+	border-radius: 5px;
+	height: 6px;
+	width: 100%;
+	margin: 0;
 }
 
-.body_header{
-     background: linear-gradient(90deg, rgba(31,162,255,1) 0%, rgba(18,216,250,1) 47%, rgba(166,255,203,1) 100%);
-    
+.About_us {
+	height: 100%;
+	width: 100%;
+	align-items: center;
+	display: grid;
+	place-items: center;
 }
-.image{
-    width: 200px;
-    height: 200px;
-}
-.image img{
-    width: 100% !important;
-    height: 100% !important;
-   margin-left: 10px;
-}
-.About_us{
-    display: flex;
-   justify-content: space-between;
 
-   
+.text {
+	height: 200px;
 }
-.About_us{
-    display: flex;
-    place-items: center;
-   justify-content: space-between;
 
-   
+.text img {
+	width: 100%;
+	height: 100%;
 }
-.text{
-    font-size: 45px;
-    width: fit-content;
-   
+
+.container_all {
+	margin: 0 auto;
+	height: 100%;
+	width: 75%;
+}
+
+.container_all nav {
+	display: flex;
+	height: 100%;
+	align-items: center;
+	margin: 0 auto;
+}
+
+.container_all ul {
+	margin: 0;
+	display: flex;
+
+}
+
+.menu_header {
+	height: 50px;
+	background-color: #396FC5;
+}
+
+.body_header {
+	background: linear-gradient(90deg, rgba(31, 162, 255, 1) 0%, rgba(18, 216, 250, 1) 47%, rgba(166, 255, 203, 1) 100%);
+
+}
+
+.image {
+	width: 200px;
+	height: 200px;
+}
+
+.image img {
+	width: 100% !important;
+	height: 100% !important;
+	margin-left: 10px;
+}
+
+.About_us {
+	display: flex;
+	justify-content: space-between;
+
+
+}
+
+.About_us {
+	display: flex;
+	place-items: center;
+	justify-content: space-between;
+
+
+}
+
+.text {
+	font-size: 45px;
+	width: fit-content;
+
 }
 
 
@@ -102,76 +113,86 @@
     }
 }
 */
-@media (max-width: 1441px) { 
+@media (max-width: 1441px) {
 
-    .text{
-        height: 90%;
-        width: 78%;
-    }
-    .image{
-        height: 90%;
-       width: 20%;
-    }
-    .mainInfo{
-        height: 220px;
-    }
+	.text {
+		height: 90%;
+		width: 78%;
+	}
+
+	.image {
+		height: 90%;
+		width: 20%;
+	}
+
+	.mainInfo {
+		height: 220px;
+	}
 }
 
-@media (max-width: 1441px) { 
+@media (max-width: 1441px) {
 
-    .text{
-        height: 90%;
-        width: 78%;
-    }
-    .image{
-        height: 90%;
-       width: 20%;
-    }
-    .mainInfo{
-        height: 210px;
-    }
+	.text {
+		height: 90%;
+		width: 78%;
+	}
+
+	.image {
+		height: 90%;
+		width: 20%;
+	}
+
+	.mainInfo {
+		height: 210px;
+	}
 }
 
-@media (max-width: 769px) { 
+@media (max-width: 769px) {
 
-    .text{
-        height: 90%;
-        width: 78%;
-    }
-    .image{
-        height: 90%;
-       width: 20%;
-    }
-    .mainInfo{
-        height: 150px;
-    }
+	.text {
+		height: 90%;
+		width: 78%;
+	}
+
+	.image {
+		height: 90%;
+		width: 20%;
+	}
+
+	.mainInfo {
+		height: 150px;
+	}
 }
 
-@media (max-width: 426px) { 
+@media (max-width: 426px) {
 
-    .text{
-        height: 90%;
-        width: 78%;
-    }
-    .image{
-        height: 90%;
-       width: 20%;
-    }
-    .mainInfo{
-        height: 80px;
-    }
+	.text {
+		height: 90%;
+		width: 78%;
+	}
+
+	.image {
+		height: 90%;
+		width: 20%;
+	}
+
+	.mainInfo {
+		height: 80px;
+	}
 }
 
-@media (max-width: 376px) { 
-    .text{
-        height: 95%;
-        width: 78%;
-    }
-    .image{
-        height: 95%;
-       width: 20%;
-    }
-    .mainInfo{
-        height: 75px;
-    }
+@media (max-width: 376px) {
+	.text {
+		height: 95%;
+		width: 78%;
+	}
+
+	.image {
+		height: 95%;
+		width: 20%;
+	}
+
+	.mainInfo {
+		height: 75px;
+	}
 }
