--- a/website/ClientApp/src/components/AdminPage/New/AdminSidebar.css
+++ b/website/ClientApp/src/components/AdminPage/New/AdminSidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
-	width: 20%;
+	width: 15%;
 	height: 100%;
-	border-right: 1px solid;
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .sidebar .sidebar_menu{
