--- a/website/ClientApp/src/components/AdminPage/New/NewAdmin.css
+++ b/website/ClientApp/src/components/AdminPage/New/NewAdmin.css
@@ -9,7 +9,9 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 	background-color: burlywood;
+	
 }
 
 .header h1 {
